tests/expression/function_wrong_ret.sy
start :: fn {

    f : fn -> int = fn {}
    f
}

// error: $Missmatch { .. }
